重新写表单生成器

--- a/application/Index/View/Flowdesign/index.html
+++ b/application/Index/View/Flowdesign/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="author" content="leipi.org">
-    <link href="/static/work/css/bootstrap/css/bootstrap.css?" rel="stylesheet" type="text/css" />
+    <link href="__Flow__/css/bootstrap/css/bootstrap.css?" rel="stylesheet" type="text/css" />
     <!--[if lte IE 6]>
-    <link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/bootstrap-ie6.css?">
+    <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/bootstrap-ie6.css?">
     <![endif]-->
     <!--[if lte IE 7]>
-    <link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/ie.css?">
+    <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/ie.css?">
     <![endif]-->
-    <link href="/static/work/css/site.css?" rel="stylesheet" type="text/css" />
+    <link href="__Flow__/css/site.css?" rel="stylesheet" type="text/css" />
   <title>流程设计器 Flowdesign.leipi.org</title>
   <meta name="keyword" content="流程设计器,Web Flowdesign,Flowdesigner,专业流程设计器,WEB流程设计器">
   <meta name="description" content="国内最容易使用和开发的流程设计器，你可以在此基础上任意修改使功能无限强大！">
-<link rel="stylesheet" type="text/css" href="/static/work/js/flowdesign/flowdesign.css"/>
+<link rel="stylesheet" type="text/css" href="__Flow__/js/flowdesign/flowdesign.css"/>
 <!--select 2-->
-<link rel="stylesheet" type="text/css" href="/static/work/js/jquery.multiselect2side/css/jquery.multiselect2side.css"/>
+<link rel="stylesheet" type="text/css" href="__Flow__/js/jquery.multiselect2side/css/jquery.multiselect2side.css"/>
 <!-- fixed navbar -->
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="navbar-inner">
@@ -67,15 +67,15 @@
 <div class="container mini-layout" id="flowdesign_canvas">
 
 </div> <!-- /container -->
-<script type="text/javascript" src="/static/work/js/jquery-1.7.2.min.js?"></script>
-<script type="text/javascript" src="/static/work/css/bootstrap/js/bootstrap.min.js?"></script>
-<script type="text/javascript" src="/static/work/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
-<script type="text/javascript" src="/static/work/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
-<script type="text/javascript" src="/static/work/js/jquery.contextmenu.r2.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js?"></script>
+<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
+<script type="text/javascript" src="__Flow__/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery.contextmenu.r2.js?"></script>
 <!--select 2-->
-<script type="text/javascript" src="/static/work/js/jquery.multiselect2side/js/jquery.multiselect2side.js?" ></script>
+<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js?" ></script>
 <!--flowdesign-->
-<script type="text/javascript" src="/static/work/js/flowdesign/leipi.flowdesign.v3.js?"></script>
+<script type="text/javascript" src="__Flow__/js/flowdesign/leipi.flowdesign.v3.js?"></script>
 <script type="text/javascript">
 var the_flow_id ='{$one.id}';
 function callbackSuperDialog(selectValue){
