--- a/application/Index/View/Flowdesign/super_dialog.html
+++ b/application/Index/View/Flowdesign/super_dialog.html
@@ -1,20 +1,20 @@
 <extend name="Public/base_modal" />
 <block name="head">
-<link href="/static/work/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+<link href="__Flow__/css/bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
 <!--[if lte IE 6]>
-<link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/bootstrap-ie6.css">
+<link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/bootstrap-ie6.css">
 <![endif]-->
 <!--[if lte IE 7]>
-<link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/ie.css">
+<link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/ie.css">
 <![endif]-->
 <!--select 2-->
-<link rel="stylesheet" type="text/css" href="/static/work/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
-<link href="/static/work/css/site.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="__Flow__/js/jquery.multiselect2side/css/jquery.multiselect2side.css" media="screen" />
+<link href="__Flow__/css/site.css" rel="stylesheet" type="text/css" />
 
-<script type="text/javascript" src="/static/work/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="/static/work/css/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js"></script>
 <!--select 2-->
-<script type="text/javascript" src="/static/work/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
+<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
 
 <script type="text/javascript">
     var _root='',_controller = '';
