--- a/application/Index/View/Flowdesign/attribute.html
+++ b/application/Index/View/Flowdesign/attribute.html
@@ -7,15 +7,15 @@
     <meta name="author" content="leipi.org">
     
     <!--[if lte IE 6]>
-    <link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/bootstrap-ie6.css?">
+    <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/bootstrap-ie6.css?">
     <![endif]-->
     <!--[if lte IE 7]>
-    <link rel="stylesheet" type="text/css" href="/static/work/css/bootstrap/css/ie.css?">
+    <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/ie.css?">
     <![endif]-->
-    <link href="/static/work/css/site.css?" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" type="text/css" href="/static/work/js/flowdesign/flowdesign.css"/>
-<link rel="stylesheet" type="text/css" href="/static/work/js/jquery.multiselect2side/css/jquery.multiselect2side.css"/>
-<link href="/static/work/css/bootstrap/css/bootstrap.css?2025" rel="stylesheet" type="text/css" />
+    <link href="__Flow__/css/site.css?" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" type="text/css" href="__Flow__/js/flowdesign/flowdesign.css"/>
+<link rel="stylesheet" type="text/css" href="__Flow__/js/jquery.multiselect2side/css/jquery.multiselect2side.css"/>
+<link href="__Flow__/css/bootstrap/css/bootstrap.css?2025" rel="stylesheet" type="text/css" />
 <ul class="nav nav-tabs" id="attributeTab">
   <li {if condition="$op eq 'basic'"} class="active"{/if}><a href="#attrBasic">常规</a></li>
   <li><a href="#attrPower">权限</a></li>
@@ -316,13 +316,13 @@ function superDialog(URL,viewField,hidField,isOnly,dialogWidth,dialogHeight)
 }
 </script>
 
-<script type="text/javascript" src="/static/work/js/jquery-1.7.2.min.js?"></script>
-<script type="text/javascript" src="/static/work/css/bootstrap/js/bootstrap.min.js?"></script>
-<script type="text/javascript" src="/static/work/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
-<script type="text/javascript" src="/static/work/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
-<script type="text/javascript" src="/static/work/js/jquery.contextmenu.r2.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js?"></script>
+<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
+<script type="text/javascript" src="__Flow__/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery.contextmenu.r2.js?"></script>
 <!--select 2-->
-<script type="text/javascript" src="/static/work/js/jquery.multiselect2side/js/jquery.multiselect2side.js?" ></script>
+<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js?" ></script>
 <!--flowdesign-->
-<script type="text/javascript" src="/static/work/js/flowdesign/leipi.flowdesign.v3.js?"></script>
-<script type="text/javascript" src="/static/work/js/flowdesign/attribute.js"></script>
+<script type="text/javascript" src="__Flow__/js/flowdesign/leipi.flowdesign.v3.js?"></script>
+<script type="text/javascript" src="__Flow__/js/flowdesign/attribute.js"></script>
