完善工作流选人，角色方式，修正部分小细节

--- a/application/Index/View/Flowdesign/attribute.html
+++ b/application/Index/View/Flowdesign/attribute.html
@@ -1,11 +1,4 @@
-
-<html>
- <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="author" content="leipi.org">
-    
+{include file='pub/base' /}
     <!--[if lte IE 6]>
     <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/bootstrap-ie6.css?">
     <![endif]-->
@@ -84,7 +77,9 @@
                 <label class="control-label">办理人</label>
                 <div class="controls">
                     <input type="hidden" name="auto_sponsor_ids" id="auto_sponsor_ids" value="{$one.auto_sponsor_ids}">
-                    <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定办理人" name="auto_sponsor_text" id="auto_sponsor_text" value="{$one.auto_sponsor_text ?? ''}"> <a href="javascript:void(0);" class="btn" onclick="superDialog('{:url('super_dialog',['op'=>'user'])}','auto_sponsor_text','auto_sponsor_ids');">选择</a>
+                    <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定办理人" name="auto_sponsor_text" id="auto_sponsor_text" value="{$one.auto_sponsor_text ?? ''}"> 
+					<a class="btn" onclick="layer_show('办理人','{:url('super_user')}','600','350')">选择</a>
+					
                 </div> 
               </div>
             </div>
@@ -93,7 +88,8 @@
                 <label class="control-label">指定角色</label>
                 <div class="controls">
                     <input type="hidden" name="auto_role_ids" id="auto_role_value" value="{$one.auto_role ?? ''}">
-                    <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定角色" name="auto_role_text" id="auto_role_text" value="{$one.auto_role_text ?? ''}"> <a href="javascript:void(0);" class="btn" onclick="superDialog('{:url('super_dialog',['op'=>'role'])}','auto_role_text','auto_role_value');">选择</a>
+                    <input class="input-xlarge" readonly="readonly" type="text" placeholder="指定角色" name="auto_role_text" id="auto_role_text" value="{$one.auto_role_text ?? ''}">
+					<a class="btn" onclick="layer_show('办理人','{:url('super_role')}','600','350')">选择</a>
                 </div> 
               </div>
             </div>
@@ -276,44 +272,7 @@
 <script type="text/javascript">
 
 var _out_condition_data = [];
-function callbackSuperDialog(selectValue){
-     var aResult = selectValue.split('@leipi@');
-     $('#'+window._viewField).val(aResult[0]);
-     $('#'+window._hidField).val(aResult[1]);
-    //document.getElementById(window._hidField).value = aResult[1];
-    
-}
-/**
- * 弹出窗选择用户部门角色
- * showModalDialog 方式选择用户
- * URL 选择器地址
- * viewField 用来显示数据的ID
- * hidField 隐藏域数据ID
- * isOnly 是否只能选一条数据
- * dialogWidth * dialogHeight 弹出的窗口大小
- */
- 
- 
-function superDialog(URL,viewField,hidField,isOnly,dialogWidth,dialogHeight)
-{
-    dialogWidth || (dialogWidth = 620)
-    ,dialogHeight || (dialogHeight = 520)
-    ,loc_x = 500
-    ,loc_y = 40
-    ,window._viewField = viewField
-    ,window._hidField= hidField;
-    // loc_x = document.body.scrollLeft+event.clientX-event.offsetX;
-    //loc_y = document.body.scrollTop+event.clientY-event.offsetY;
-    if(window.ActiveXObject){ //IE  
-        var selectValue = window.showModalDialog(URL,self,"edge:raised;scroll:1;status:0;help:0;resizable:1;dialogWidth:"+dialogWidth+"px;dialogHeight:"+dialogHeight+"px;dialogTop:"+loc_y+"px;dialogLeft:"+loc_x+"px");
-        if(selectValue){
-            callbackSuperDialog(selectValue);
-        }
-    }else{  //非IE 
-        var selectValue = window.open(URL, 'newwindow','height='+dialogHeight+',width='+dialogWidth+',top='+loc_y+',left='+loc_x+',toolbar=no,menubar=no,scrollbars=no, resizable=no,location=no, status=no');  
-    
-    }
-}
+
 </script>
 
 <script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js?"></script>
