--- a/application/Index/View/index/welcome.html
+++ b/application/Index/View/index/welcome.html
@@ -13,7 +13,9 @@
 {volist name='user' id='k'}
 	<a href="{:url('login',['id'=>$k.id,'user'=>$k.username,'role'=>$k.role])}" class="btn btn-primary radius">{$k.username}</a>
 {/volist}
-<h2>文档正式托管看云：<a href="https://www.kancloud.cn/guowenbin/tpflow/" target="_blank">阅读</a></h2>
+
+<h2>文档正式托管看云：<a href="https://www.kancloud.cn/guowenbin/tpflow/" target="_blank">阅读</a> 　　<a href='https://gitee.com/ntdgg/tpflow/stargazers' target="_blank"><img src='https://gitee.com/ntdgg/tpflow/badge/star.svg?theme=white' alt='star'></img></a></h2>
+
 <h2>API 文档说明</h2>
 <h4>第一步：工作流设计</h4>
 <pre class="prettyprint linenums">
