完善工作流设计，办理人员必须填写。

--- a/application/Index/View/Flowdesign/index.html
+++ b/application/Index/View/Flowdesign/index.html
@@ -1,4 +1,7 @@
 {include file='pub/base' /}
+<style>
+html,body{height:100%;background-color: #3a4144;}
+</style>
     <link href="__Flow__/css/bootstrap/css/bootstrap.css?" rel="stylesheet" type="text/css" />
     <!--[if lte IE 6]>
     <link rel="stylesheet" type="text/css" href="__Flow__/css/bootstrap/css/bootstrap-ie6.css?">
