--- a/application/Index/View/Flowdesign/attribute.html
+++ b/application/Index/View/Flowdesign/attribute.html
@@ -17,7 +17,7 @@
   <li {if condition="$op eq 'style'"} class="active"{/if}><a href="#attrStyle">样式</a></li>
 </ul>
 
-<form class="form-horizontal" target="hiddeniframe" method="post" id="flow_attribute" name="flow_attribute" action="{:url('save_attribute')}">
+<form  class="form-horizontal" action="{:url('save_attribute')}" method="post" name="form" id="form">
 <input type="hidden" name="flow_id" value="{$one.flow_id}"/>
 <input type="hidden" name="process_id" value="{$one.id}"/>
   <div class="tab-content">
@@ -59,18 +59,14 @@
         <div class="control-group">
             <label class="control-label" >办理人员</label>
             <div class="controls">
-              <select name="auto_person" id="auto_person_id">
-                <option value="0">请选择办理人员或者角色</option>
+              <select name="auto_person" id="auto_person_id" datatype="*" nullmsg="请选择办理人员或者角色！">
+                <option value="">请选择办理人员或者角色</option>
                 <option value="5" {if condition="$one['auto_person'] eq 5"}selected="selected"{/if}>指定角色</option>
                 <option value="4" {if condition="$one['auto_person'] eq 4"}selected="selected"{/if}>指定人员</option>
               </select>
-              <span class="help-inline">*</span>
+              <span class="help-inline">*选择人员或者办理的角色！</span>
             </div>
-            <div class="controls {if condition="$one['auto_person'] eq 0"}hide{/if}" id="auto_unlock_id" >
-              <label class="checkbox">
-                <input type="checkbox" name="auto_unlock" value="1" {if condition="$one['auto_unlock'] eq 1"}checked="checked"{/if}>允许更改
-              </label>
-            </div>
+           
 
             <div id="auto_person_4" {if condition="$one['auto_person'] neq 4"}class="hide"{/if}>
               <div class="control-group">
@@ -260,22 +256,13 @@
 <div>
   <hr/>
   <span class="pull-right">
-      <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">取消</a>
-      <button class="btn btn-primary" type="submit" id="attributeOK">确定保存</button>
+      <a onclick="layer_close()" class="btn" >取消</a>
+      <button  class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
   </span>
 </div>
 </form>
-<iframe id="hiddeniframe" style="display: none;" name="hiddeniframe"></iframe>
-
-
-
-<script type="text/javascript">
-
-var _out_condition_data = [];
-
-</script>
-
 <script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js?"></script>
+
 <script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js?"></script>
 <script type="text/javascript" src="__Flow__/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
 <script type="text/javascript" src="__Flow__/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
@@ -285,3 +272,21 @@ var _out_condition_data = [];
 <!--flowdesign-->
 <script type="text/javascript" src="__Flow__/js/flowdesign/leipi.flowdesign.v3.js?"></script>
 <script type="text/javascript" src="__Flow__/js/flowdesign/attribute.js"></script>
+
+<script type="text/javascript">
+var _out_condition_data = [];
+</script>
+
+<script type="text/javascript" src="__LIB__/Validform/5.3.2/Validform.min.js"></script>
+<script type="text/javascript">
+$(function(){
+	$("#form").Validform({
+            tiptype:1,
+            ajaxPost:true,
+            showAllError:true,
+            callback:function(ret){
+                ajax_progress(ret);
+            }
+        });
+});
+</script>
