--- a/application/index/view/formdesign/add.html
+++ b/application/index/view/formdesign/add.html
@@ -22,7 +22,7 @@
                     <select name="file" class="select">
                         <option value="all">默认生成文件（all）</option>
                         <option value="controller">控制器（controller）</option>
-						<option value="数据表（table）">数据表（table）</option>
+						<!-- <option value="数据表（table）">数据表（table）</option> -->
                     </select>
                 </div>
 			</td>
