--- a/application/index/view/flowdesign/index.html
+++ b/application/index/view/flowdesign/index.html
@@ -51,13 +51,13 @@ html,body{height:100%;background-color: #3a4144;}
 <div class="container mini-layout" id="flowdesign_canvas">
 
 </div> <!-- /container -->
-<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js?"></script>
-<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="__Flow__/css/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="__Flow__/js/jquery-ui/jquery-ui-1.9.2-min.js?" ></script>
-<script type="text/javascript" src="__Flow__/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js?"></script>
+<script type="text/javascript" src="__Flow__/js/jsPlumb/jquery.jsPlumb-1.3.16-all-min.js"></script>
 <script type="text/javascript" src="__Flow__/js/jquery.contextmenu.r2.js?"></script>
 <!--select 2-->
-<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js?" ></script>
+<script type="text/javascript" src="__Flow__/js/jquery.multiselect2side/js/jquery.multiselect2side.js" ></script>
 <!--flowdesign-->
 <script type="text/javascript" src="__Flow__/js/flowdesign/leipi.flowdesign.v3.js?"></script>
 <script type="text/javascript">
