--- a/application/index/view/formdesign/index.html
+++ b/application/index/view/formdesign/index.html
@@ -32,9 +32,12 @@
 					<span class="btn  radius size-S" data-title="查看" data-href="{:url('view',['id'=>$k.id])}" onclick="Hui_admin_tab(this)"><i class="Hui-iconfont">查看</span>
 					{if condition='$k.status == 0'}
 					<span  onclick="layer_show('新增函数','{:url('functions',['id'=>$k.id])}','850','500')" class="btn  radius size-S">新增函数</span>
+					{if condition='$k.ziduan == ""'}
 					<span  onclick="layer_show('表单设计','{:url('desc',['id'=>$k.id])}','950','500')" class="btn  radius size-S">表单设计</span>
-					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit',['id'=>$k.id])}','850','500')">修改</span>
-					<a class="btn  radius size-S" href="{:url('shengcheng',['id'=>$k.id])}">生成</a>
+					{/if}
+					<span class="btn  radius size-S" onclick="layer_show('修改','{:url('edit_desc',['id'=>$k.id])}','850','500')">设计修改</span>
+					<span class="btn  radius size-S" onclick="layer_show('预览','{:url('dsec_view',['id'=>$k.id])}','850','500')">设计预览</span>
+					<a class="btn  radius size-S" href="{:url('shengcheng',['id'=>$k.id])}">一键生成</a>
 					{else/}
 					已生成
 					{/if}
