--- a/application/index/view/flow/do_check.html
+++ b/application/index/view/flow/do_check.html
@@ -7,7 +7,7 @@
 <input type="hidden" value="{$info.wf_type}" name="wf_type">
 <input type="hidden" value="{$flowinfo.flow_id}" name="flow_id">
 <input type="hidden" value="{$flowinfo.flow_process}" name="flow_process">
-<input type="hidden" value="{$flowinfo.run_id}" name="run_id">
+<input type="hidden" value="{$flowinfo.run_id}" name="run_id" id='run_id'>
 <input type="hidden" value="{$flowinfo.run_process}" name="run_process">
 <input type="hidden" value="{$flowinfo['nexprocess']['id']}" name="npid">
 		<table class="table table-border table-bordered table-bg" style='width:98%'>
@@ -27,18 +27,33 @@
 				</tr>
 				<tr id='nex_process'>
 				<th style='width:30px' >下一步骤</th>
-				<th>{$flowinfo['nexprocess']['process_name']}({$flowinfo['nexprocess']['todo']})</th>
+				<th>
+				{if condition='$flowinfo.nexprocess.auto_person != 3'}
+					{$flowinfo['nexprocess']['process_name']}({$flowinfo['nexprocess']['todo']})
+				{else/}
+					<span class="select-box">
+					<select name="todo" id='todo'  class="select"  datatype="*" >
+					<option value="">请指定办理人员</option>
+					{volist name='$flowinfo.nexprocess.todo.ids' id='todo'}
+					<option value="{$todo}*%*{$flowinfo['nexprocess']['todo']['text'][$key]}">{$flowinfo['nexprocess']['todo']['text'][$key]}</option>
+					{/volist}
+					</select>
+				
+				
+				{/if}
+				</th>
 				</tr>
 				<tr style='display:none' id='back_process'>
 				<th style='width:30px'>回退步骤</th>
 				<th>
 					<span class="select-box">
-					<select name="wf_backflow" id='backflow'  class="select"  datatype="*" >
+					<select name="wf_backflow" id='backflow'  class="select"  datatype="*" onchange='find()'>
 					<option value="">请选择回退步骤</option>
 					{volist name='$flowinfo.preprocess' id='back'}
 					<option value="{$key}">{$back}</option>
 					{/volist}
 					</select>
+					<input type="hidden" value="" name="btodo" id='btodo'>
 				</span>
 				</th>
 				</tr>
@@ -181,6 +196,14 @@ function iFrameHeight() {
 		   ifm.width = '100%';
 		}   
 } 
+function find(){
+	$.post("{:url('ajax_back')}",{"back_id":$('#backflow').val(),"run_id":$('#run_id').val()},function(data){
+				if(data != ''){
+					$('#btodo').val(data);
+				}
+				
+			},'json');
+}
 </script>
 <!--/请在上方写此页面业务相关的脚本-->
 </body>
