修正角色无法办理BUG，去除选择时可以选择所有办理人员选项

--- a/application/index/view/flowdesign/super_role.html
+++ b/application/index/view/flowdesign/super_role.html
@@ -16,7 +16,7 @@
 			</td></tr>
 			<tr><td>
 			 <select name="dialog_searchable" id="dialog_searchable" multiple="multiple" style="display:none;">
-            <option value="all">【全部】</option>
+           <!--  <option value="all">【全部】</option> -->
 			{volist name='role' id='k'}
             <option value="{$k.id}" >{$k.username}</option>
 			{/volist}
