修正回退中的错误。

--- a/application/index/view/yzgl/edit.html
+++ b/application/index/view/yzgl/edit.html
@@ -6,26 +6,26 @@
 		<table class="table table-border table-bordered table-bg">
             <tr>
             <td>业务名称</td>
-            <td ><input type="text" class="input-text" placeholder="业务名称" name="demo" value="{$vo.demo ?? ''}">
+            <td ><input type="text" class="input-text" placeholder="业务名称" name="name" value="{$vo.name ?? ''}">
  </td>
             <td>业务备注</td>
-            <td colspan=3><input type="text" class="input-text" placeholder="业务备注" name="demo" value="{$vo.demo ?? ''}">
+            <td colspan=3><input type="text" class="input-text" placeholder="业务备注" name="bz" value="{$vo.bz ?? ''}">
  </td>
             </tr>
             <tr>
             <td>联系人</td>
-            <td ><input type="text" class="input-text" placeholder="联系人" name="demo" value="{$vo.demo ?? ''}">
+            <td ><input type="text" class="input-text" placeholder="联系人" name="user" value="{$vo.user ?? ''}">
  </td>
             <td>联系人电话</td>
-            <td ><input type="text" class="input-text" placeholder="联系人电话" name="demo" value="{$vo.demo ?? ''}">
+            <td ><input type="text" class="input-text" placeholder="联系人电话" name="tel" value="{$vo.tel ?? ''}">
  </td>
             <td>联系人地址</td>
-            <td ><input type="text" class="input-text" placeholder="联系人地址" name="demo" value="{$vo.demo ?? ''}">
+            <td ><input type="text" class="input-text" placeholder="联系人地址" name="add" value="{$vo.add ?? ''}">
  </td>
             </tr>
             <tr>
             <td>备注</td>
-            <td colspan=5><input type="text" class="input-text" placeholder="备注" name="demo" value="{$vo.demo ?? ''}">
+            <td colspan=5><input type="text" class="input-text" placeholder="备注" name="bzs" value="{$vo.bzs ?? ''}">
  </td>
             </tr><td></td>
             <td></td><td></td>
