修正流程步骤删除错误；流程运行时不允许修改；修正linux大小写故障；新增官方文档补充快速开发；修订部分错误

--- a/application/index/view/demo/view.html
+++ b/application/index/view/demo/view.html
@@ -5,32 +5,15 @@
         <input type="hidden" name="id" value="{$vo.id ?? ''}">
 		<table class="table table-border table-bordered table-bg">
             <tr>
-            <td>业务名称</td>
-            <td ><input type="text" class="input-text" placeholder="业务名称" name="demo" value="{$vo.demo ?? ''}">
+            <td>年龄</td>
+            <td colspan=3><input type="text" class="input-text" placeholder="年龄" name="demo" value="{$vo.demo ?? ''}">
  </td>
-            <td>业务备注</td>
-            <td colspan=3><input type="text" class="input-text" placeholder="业务备注" name="demo" value="{$vo.demo ?? ''}">
+            <td>标题</td>
+            <td colspan=3><input type="text" class="input-text" placeholder="标题" name="demo" value="{$vo.demo ?? ''}">
  </td>
-            </tr>
-            <tr>
-            <td>联系人</td>
-            <td ><input type="text" class="input-text" placeholder="联系人" name="demo" value="{$vo.demo ?? ''}">
- </td>
-            <td>联系人电话</td>
-            <td ><input type="text" class="input-text" placeholder="联系人电话" name="demo" value="{$vo.demo ?? ''}">
- </td>
-            <td>联系人地址</td>
-            <td ><input type="text" class="input-text" placeholder="联系人地址" name="demo" value="{$vo.demo ?? ''}">
- </td>
-            </tr>
-            <tr>
-            <td>备注</td>
-            <td colspan=5><input type="text" class="input-text" placeholder="备注" name="demo" value="{$vo.demo ?? ''}">
- </td>
-            </tr><td></td>
-            <td></td><td></td>
-            <td></td><td></td>
-            <td></td></tr></table>
+            <td>Untitled</td>
+            <td ><input type="text" class="input-text" placeholder="Untitled" name="demo" value="{$vo.demo ?? ''}">
+ </td></table>
         <div class="row cl">
             <div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-3">
                 <button type="submit" class="btn btn-primary radius">&nbsp;&nbsp;提交&nbsp;&nbsp;</button>
