--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -3,7 +3,7 @@
 	<div class="navbar navbar-fixed-top">
 		<div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="{:url('index')}">
 		Tpflow</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="/aboutHui.shtml"></a> 
-			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V1.5</span> 
+			<span class="logo navbar-slogan f-l mr-10 hidden-xs"> V2.1</span> 
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'><b>这可能是Thinkphp第一款开源的，工作流插件</b>  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>开源协议：MIT  </span>
 			<span class='logo navbar-slogan f-l mr-10 hidden-xs'>作者：蝈蝈（1838188896） 交流群：532797225</span>
@@ -66,8 +66,7 @@
 		<div class="Hui-tabNav-wp">
 			<ul id="min_title_list" class="acrossTab cl">
 				<li class="active">
-					<span title="我的桌面" data-href="welcome.html">我的桌面</span>
-					<em></em></li>
+					<span title="我的桌面" data-href="welcome.html">我的桌面</span><em></em></li>
 		</ul>
 	</div>
 		<div class="Hui-tabNav-more btn-group"><a id="js-tabNav-prev" class="btn radius btn-default size-S" href="javascript:;"><i class="Hui-iconfont">&#xe6d4;</i></a><a id="js-tabNav-next" class="btn radius btn-default size-S" href="javascript:;"><i class="Hui-iconfont">&#xe6d7;</i></a></div>
